Added bigger explore thumbnails and fixed video

--- a/Videos/la-poussiere-video.html
+++ b/Videos/la-poussiere-video.html
@@ -39,8 +39,8 @@
       </header>
       <main id="vid-wrapper">
         <div class="contentContainer">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/PLKOxNVE5sY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          </div>
+          <iframe class="video" src="https://www.youtube.com/embed/PLKOxNVE5sY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
           <div class="textContainer">
             <p>
               Chris Segura & Drew Simon playing the Midland Two Step in La Poussiere. 
