--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -63,7 +63,9 @@
         <a href="../VR-tours/la-poussiere-vr-tour/index.html">
           <figure>
             <div class="img-scrim">
-              <img src="../images/poussiere-take-the-tour-img.jpg" alt="La Poussiere Virtual Tour" />
+              <img class="img-small" src="../images/poussiere-take-the-tour-img.jpg" alt="La Poussiere Virtual Tour" />
+              <img class="img-large" src="../images/poussiere-lg-take-the-tour-img.jpg" alt="La Poussiere Virtual Tour" />
+              <img class="img-xl" src="../images/poussiere-xl-take-the-tour-img.jpg" alt="La Poussiere Virtual Tour" />
             </div>
             <figcaption>Virtual Tour</figcaption>
           </figure>
@@ -71,7 +73,9 @@
         <a href="../Videos/la-poussiere-video.html">
           <figure>
             <div class="img-scrim">
-              <img src="../images/poussiere-watch-the-video.jpg" alt="La Poussiere Virtual Concert" />
+              <img class="img-small" src="../images/poussiere-watch-the-video.jpg" alt="La Poussiere Virtual Concert" />
+              <img class="img-large" src="../images/poussiere-lg-watch-the-video.jpg" alt="La Poussiere Virtual Concert" />
+              <img class="img-xl" src="../images/poussiere-xl-watch-the-video.jpg" alt="La Poussiere Virtual Concert" />
             </div>
             <figcaption>360 Concert</figcaption>
           </figure>
@@ -79,7 +83,9 @@
         <a href="#">
           <figure>
             <div class="img-scrim">
-              <img src="../images/poussiere-image-gallery-img.jpg" alt="La Poussiere Image Gallarys" />
+              <img class="img-small" src="../images/poussiere-image-gallery-img.jpg" alt="La Poussiere Image Gallarys" />
+              <img class="img-large" src="../images/poussiere-lg-image-gallery-img.jpg" alt="La Poussiere Image Gallarys" />
+              <img class="img-xl" src="../images/poussiere-xl-image-gallery-img.jpg" alt="La Poussiere Image Gallarys" />
             </div>
             <figcaption>Image Gallery</figcaption>
           </figure>
