Added Footer to home and hall pages

--- a/hall-pages/hamilton.html
+++ b/hall-pages/hamilton.html
@@ -162,7 +162,7 @@
               <button class="arButton" slot="ar-button">
                 <div class="arButton">
                   <span class="material-icons"> view_in_ar </span>
-                   <p class="button">View in AR</p>
+                   <!-- <p class="button">View in AR</p> -->
                 </div>
               </button>
             </model-viewer>
@@ -203,6 +203,7 @@
         </p>
       </div>
     </main>
+    <footer></footer>
     <script src="../main.js"></script>
   </body>
 </html>
