Added Chat GPT Carousel (don't worry, I changed it

--- a/hall-pages/hamilton.html
+++ b/hall-pages/hamilton.html
@@ -106,7 +106,7 @@
             <figcaption>Concert Audio</figcaption>
           </figure>
         </a>
-        <a href="#">
+        <a href="../gallery-pages/hamiltons-place-gallery.html">
           <figure>
             <div class="img-scrim">
               <img
