Added Copyright for UVU

--- a/Videos/la-poussiere-video.html
+++ b/Videos/la-poussiere-video.html
@@ -48,5 +48,10 @@
           </div>
         </div>
     </main>
+    <footer>
+      <p>
+        © Copyright Utah Valley University 
+      </p>
+    </footer>
 </body>
 </html>
