--- a/gallery-pages/hamiltons-place-gallery.html
+++ b/gallery-pages/hamiltons-place-gallery.html
@@ -56,6 +56,10 @@
           <button id="scroll-right">&#8250;</button>
         </div>
     </main>
-    <footer class="gallery-footer"></footer>
+    <footer class="gallery-footer">
+      <p>
+        © Copyright Utah Valley University 
+      </p>
+    </footer>
 </body>
 </html>
