--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -152,7 +152,9 @@
         </p>
       </div>
     </main>
-    <footer></footer>
+    <footer><p>
+      © Copyright Utah Valley University 
+    </p></footer>
     <script src="../main.js"></script>
   </body>
 </html>
