--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       </div>
     </main>
     <footer>
+      <p>
+        © Copyright Utah Valley University 
+      </p>
     </footer>
     <script src="main.js"></script>
   </body>
