--- a/hall-pages/hamilton.html
+++ b/hall-pages/hamilton.html
@@ -203,7 +203,11 @@
         </p>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p>
+        © Copyright Utah Valley University 
+      </p>
+    </footer>
     <script src="../main.js"></script>
   </body>
 </html>
