Finished all Gallery Pages

--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -80,7 +80,7 @@
             <figcaption>360 Concert</figcaption>
           </figure>
         </a>
-        <a href="#">
+        <a href="../gallery-pages/la-poussiere-gallery.html">
           <figure>
             <div class="img-scrim">
               <img class="img-small" src="../images/poussiere-image-gallery-img.jpg" alt="La Poussiere Image Gallarys" />
