--- a/gallery-pages/la-poussiere-gallery.html
+++ b/gallery-pages/la-poussiere-gallery.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>La Poussiere Gallery</title>
+      <!-- Web Scripts -->
+      <script type="module" src="../3D-objects/model-viewer.js"></script>
+
+     <!-- Icons -->
+     <link
+     rel="stylesheet"
+     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0"
+   />
+   <link
+     href="https://fonts.googleapis.com/icon?family=Material+Icons"
+     rel="stylesheet"
+   />
+
+   <!-- Fonts Files-->
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+   <!-- Local Styles -->
+   <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body>
-    
+    <header id="VR-tour-header">
+        <div id="link">
+          <a href="../../hall-pages/la-poussiere.html">
+            <img src="../../images/outline_arrow_back_ios_white_36dp.png" alt="back">
+          </a>
+        </div>
+        <div id="title">
+          <h2>La Poussiere Image Gallery</h2>
+        </div>
+      </header>
+      <main class="gallery-container">
+        <div class="gallery-wrapper">
+          <img src="/images/la-poussiere-gallery/la-poussiere-gallary-image01.JPG" alt="Image 1">
+          <img src="/images/la-poussiere-gallery/la-poussiere-gallary-image02.JPG" alt="Image 2">
+          <img src="/images/la-poussiere-gallery/la-poussiere-gallary-image03.JPG" alt="Image 3">
+          <img src="/images/la-poussiere-gallery/la-poussiere-gallary-image04.JPG" alt="Image 4">
+          <img src="/images/la-poussiere-gallery/la-poussiere-gallary-image05.JPG" alt="Image 5">
+          <img src="/images/la-poussiere-gallery/la-poussiere-gallary-image06.JPG" alt="Image 6">
+        </div>
+        <div class="scroll-buttons">
+          <button id="scroll-left">&#8249;</button>
+          <button id="scroll-right">&#8250;</button>
+        </div>
+    </main>
+    <footer class="gallery-footer">
+      <p>
+        © Copyright Utah Valley University 
+      </p>
+    </footer>
+    <script src="../main.js"></script>
 </body>
 </html>
